<?xml version="1.0"?>
<package>
  <name>ros_control_demo</name>
  <version>0.0.1</version>
  <description>The ros_control_demo package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_demo</url> -->
  <url type="butracker">https://github.com/davetcoleman/ros_control_demo/issues</url> -->
  <url type="repository">https://github.com/davetcoleman/ros_control_demo/</url> -->

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_toolbox</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>control_toolbox</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>